<?xml version="1.0"?>
<package format="2">
  <name>debug_and_profile_helper</name>
  <version>0.3.0</version>
  <description>The debug_and_profile_helper package to provide helper functions for debug and stopwatch style timing</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="haowen.yao@tum.de">Haowen Yao</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/debug_and_profile_helper</url> -->
  <url type="repository">https://github.com/hwyao/debug_and_profile_helper</url> 

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="config/rosdoc.yaml" />
  </export>
</package>
